manifests/weave/base/block-metrics-db.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: block-metrics-db
  labels:
    app: block-metrics-db
spec:
  selector:
    matchLabels:
      app: block-metrics-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: block-metrics-db
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 2000
      serviceAccountName: bns
      containers:
      - image: postgres:latest
        name: block-metrics-db
        ports:
        - containerPort: 5432
          name: block-mt-port
        volumeMounts:
            - name: block-metrics-db-storage 
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: block-metrics-db-storage
          persistentVolumeClaim:
            claimName: block-metrics-storage-volume
---
apiVersion: v1
kind: Service
metadata:
  name: block-metrics-db 
  labels:
    app: block-metrics-db
spec:
  ports:
    - port: 5432
  selector:
    app: block-metrics-db
