manifests/weave/base/seed.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bns-fullnode-seed
  labels:
    app: bns-fullnode-seed
    component: core
spec:
  serviceName: bns-fullnode-seed
  replicas: 1
  selector:
    matchLabels:
      app: bns-fullnode-seed
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: bns-fullnode-seed
        component: core
        clusterName: bns
    spec:
      terminationGracePeriodSeconds: 20
      restartPolicy: Always
      containers:
      - name: bns
        imagePullPolicy: IfNotPresent
        image: iov1/bnsd:v0.21.0
        args:
          - -home=/data/bns
          - start
          - -bind=unix:///socks/app.sock
          - '-min_fee=0.0001 IOV'
        volumeMounts:
          - name: socksdir
            mountPath: /socks
          - name: tmdir
            mountPath: /data/bns
            subPath: bns
        securityContext:
          readOnlyRootFilesystem: true
      - name: tendermint
        imagePullPolicy: IfNotPresent
        image: iov1/tendermint:v0.31.5
        ports:
        - containerPort: 26656
          name: p2p
        - containerPort: 26657
          name: rpc
        command:
        - bash
        - "-c"
        - |
          set -ex
          nodeid=`curl weaveplaceholder-rpc:26657/status | jq -r '.result.node_info.id'`;
          exec tendermint node  \
            --p2p.persistent_peers="$nodeid@weaveplaceholder-p2p:26656" \
            --moniker="`hostname`" \
            --log_level="p2p:info,state:info,*:error" \
            --proxy_app="unix:///socks/app.sock"
        volumeMounts:
        - name: tmdir
          mountPath: /data/tendermint
          subPath: tendermint
        - name: socksdir
          mountPath: /socks
        - name: tm-rw-volume
          mountPath: /tmp
        securityContext:
          readOnlyRootFilesystem: true
        resources:
          limits:
            cpu: 1100m
            memory: 1.5Gi
          requests:
            cpu: 750m
            memory: 1Gi
      volumes:
      - name: tm-configuration
        configMap:
          name: seed-config
      - name: tm-genesis
        configMap:
          name: seed-genesis
      - name: socksdir
        emptyDir: {}
      - name: tm-rw-volume
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: tmdir
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: bns-fullnode-seed-rpc
spec:
  ports:
    - port: 26657
      name: rpc
      targetPort: 26657
  selector:
    app: bns-fullnode-seed
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: bns-fullnode-seed-p2p
spec:
  ports:
    - port: 26656
      name: rpc
      targetPort: 26656
  selector:
    app: bns-fullnode-seed
  type: NodePort
