manifests/weave/base/validator.yaml
apiVersion: v1
kind: Service
# A service allows to expose the pods ports for Ingress/Egress
metadata:
  name: weave_placeholder
spec:
  ports:
  - port: 26657
    name: rpc
  selector:
    app: weave_placeholder
---
# A loadbalancer service allows to expose the pods ports to the outside world via an IP
apiVersion: v1
kind: Service
metadata:
  name: weave_placeholder-p2p
spec:
  ports:
  - port: 26656
    name: p2p
    targetPort: 26656
  selector:
    app: weave_placeholder
  type: LoadBalancer
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: weave_placeholder
spec:
  serviceName: weave_placeholder  
  replicas: 1
  selector:
    matchLabels:
      app: weave_placeholder
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: weave_placeholder
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values: [weave_placeholder]
            topologyKey: kubernetes.io/hostname
      terminationGracePeriodSeconds: 10
      containers:
      - name: tendermint
        imagePullPolicy: Always
        image: iov1/tendermint:0.31.5
        ports:
        - containerPort: 26656
          name: p2p
        - containerPort: 26657
          name: rpc
        command:
        - bash
        - "-c"
        - |
          set -exo pipefail
          
          # wait for weave_placeholder to get started
          while [ ! -S /socks/app.sock ]; do
            sleep 1
          done
          
          exec tendermint node \
            --moniker="`hostname`" \
            --log_level="p2p:info,state:info,*:error" \
            --proxy_app="unix:///socks/app.sock"
        volumeMounts:
        - name: tmdir
          mountPath: /data/tendermint
          subPath: tendermint
        - mountPath: /data/tendermint/config/config.toml
          name: tm-configuration
          subPath: config.toml
          readOnly: true
        - name: socksdir
          mountPath: /socks
        - name: tm-rw-volume
          mountPath: /tmp
        readinessProbe:
          exec:
            command:
              - sh
              - -o
              - pipefail
              - -ec
              - 'curl -s --fail http://localhost:26657/abci_info | jq --exit-status ".result.response"'
          failureThreshold: 999999
          periodSeconds: 20
          initialDelaySeconds: 40
        livenessProbe:
          exec:
            command:
            - sh
            - -o
            - pipefail
            - -ec
            - 'curl -s --fail http://localhost:26657/abci_info | jq --exit-status ".result.response"'
          failureThreshold: 3
          initialDelaySeconds: 40
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 2
      - name: weave_placeholder
        imagePullPolicy: Always
        image: iov1/bnsd:v0.21.0
        args:
          - '-home=/data/weave_placeholder'
          - start
          - '-bind=unix:///socks/app.sock'
        volumeMounts:
        - name: socksdir
          mountPath: /socks
        - name: tmdir
          mountPath: /data/bns
          subPath: bns
      volumes:
      - name: tm-initialization
        configMap:
          name: tm-weave_placeholder-init-config
      - name: tm-configuration
        configMap:
          name: weave_placeholder-tendermint-config
      - name: socksdir
        emptyDir: {}
      - name: tm-rw-volume
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: tmdir
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
