manifests/weave/base/faucet-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weave_placeholder-faucet
spec:
  rules:
  - host: weave_placeholder-faucet.example.com
    http:
      paths:
      - backend:
          serviceName: weave_placeholder-faucet
          servicePort: http
