manifests/weave/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tendermint-bns
spec:
  rules:
  - host: bns.example.com
    http:
      paths:
      - backend:
          serviceName: bns
          servicePort: 26657
