manifests/weave/base/faucet-network.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: faucet
  labels:
    app: faucet
spec:
  podSelector:
    matchLabels:
      app: faucet
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 8080
    from:
      - ipBlock:
          cidr: '0.0.0.0/0'
  - ports:
    - port: 8080
    from:
    - podSelector:
        matchLabels:
          app: traefik-private
          component: controller
